fixed twitter card img alignment

--- a/css/style.css
+++ b/css/style.css
@@ -164,7 +164,7 @@ h2 {
     justify-content: center;
     align-items: center;
 
-    width: 20%;
+    width: 30%;
 
     border: 0px;
     border-top: 1px;
@@ -188,7 +188,7 @@ h2 {
     align-items: left;
     justify-content: center;
     
-    width: 60%;
+    width: 50%;
 
     
     padding: 10px;
